[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
doctest = false
# proc-macros = true

[features]
default = ["hash", "der", "aes", "prime"]
hash = []
der = []
aes = []
prime = []

[dependencies]
